@@ -2261,22 +2261,34 @@ Insanely High</property>
 	  </child>
 
 	  <child>
-		<widget class="GtkCheckButton" id="force-mono">
-		  <property name="visible">True</property>
-		  <property name="label" translatable="yes">Force mono output</property>
-		  <property name="use_underline">True</property>
-		  <property name="relief">GTK_RELIEF_NORMAL</property>
-		  <property name="focus_on_click">True</property>
-		  <property name="active">False</property>
-		  <property name="inconsistent">False</property>
-		  <property name="draw_indicator">True</property>
-		  <signal name="toggled" handler="on_force_mono_toggle"/>
-		</widget>
-		<packing>
-		  <property name="padding">12</property>
-		  <property name="expand">False</property>
-		  <property name="fill">True</property>
-		</packing>
+	    <widget class="GtkHBox" id="resample_hbox">
+	      <property name="visible">True</property>
+	      <property name="homogeneous">False</property>
+	      <property name="spacing">4</property>
+	      <child>
+		    <widget class="GtkCheckButton" id="force-mono">
+		      <property name="visible">True</property>
+		      <property name="label" translatable="yes">Force mono output</property>
+		      <property name="use_underline">True</property>
+		      <property name="relief">GTK_RELIEF_NORMAL</property>
+		      <property name="focus_on_click">True</property>
+		      <property name="active">False</property>
+		      <property name="inconsistent">False</property>
+		      <property name="draw_indicator">True</property>
+		      <signal name="toggled" handler="on_force_mono_toggle"/>
+		    </widget>
+		    <packing>
+		      <property name="padding">12</property>
+		      <property name="expand">False</property>
+		      <property name="fill">True</property>
+		    </packing>
+	      </child>
+	    </widget>
+	    <packing>
+	      <property name="padding">0</property>
+	      <property name="expand">False</property>
+	      <property name="fill">False</property>
+	    </packing>
 	  </child>
 
 
